# ProjectTemplates

src/: .clang-tidy  CMakeLists.txt  main.cpp
